https-nginx/local-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-nginx-ingress
  annotations: {}
  labels:
    app: nginx
spec:
  ingressClassName: nginx-ingress-microk8s-controller
  rules:
  - host: nginxsvc.local
    http:
      paths:
      - backend:
          service:
            name: nginxsvc
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: nginxsvc
            port:
              number: 443
        path: /
        pathType: Prefix
